--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,9 @@
     <!-- MAIN -->
     <div class="main">
         <!-- add partials here -->
-
+        //= partials/main-body.html
     </div>
     <!-- /MAIN -->
-
-    //= partials/hidden-block.html
 
     //= partials/footer.html
 
