--- a/src/map.html
+++ b/src/map.html
@@ -7,6 +7,7 @@
     <div class="main">
         <!-- add partials here -->
         //= partials/map.html
+        //= partials/slider.html
     </div>
     <!-- /MAIN -->
 
