--- a/src/article.html
+++ b/src/article.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 //= partials/head.html
 
 <div class="global-wrapper">
@@ -6,11 +8,18 @@
     <!-- MAIN -->
     <div class="main">
         <!-- add partials here -->
-        //= partials/main-body.html
+    //= partials/kroshki.html
+    //= partials/article-body.html
+
     </div>
     <!-- /MAIN -->
+
     //= partials/footer.html
 
 </div>
+</body>
+</html>
+<body>
+
 </body>
 </html>
