Осталось крапаль доліпити Услуги і взятись за попапи

--- a/src/articles.html
+++ b/src/articles.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 //= partials/head.html
 
 <div class="global-wrapper">
@@ -6,10 +8,12 @@
     <!-- MAIN -->
     <div class="main">
         <!-- add partials here -->
-        //= partials/main-body.html
+        //= partials/kroshki.html
+        //= partials/articles-body.html
+
     </div>
     <!-- /MAIN -->
-    //= partials/hidden-block.html
+
     //= partials/footer.html
 
 </div>
