--- a/src/map.html
+++ b/src/map.html
@@ -6,11 +6,12 @@
     <!-- MAIN -->
     <div class="main">
         <!-- add partials here -->
+        //= partials/kroshki.html
         //= partials/map.html
 
     </div>
     <!-- /MAIN -->
-
+    //= partials/hidden-block.html
     //= partials/footer.html
 
 </div>
